test/functions/deitz/default/test_default4-error.good
Error: Ambiguous call 'foo()' (test_default4-error.chpl:25)
Candidates are:
  foo(i: int, j: float, k: string)
  foo(i: float, j: string, k: int)
  foo(i: string, j: int, k: float)
